@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2022-09-14T08:24:29Z",
+  "timestamp" : "2022-09-14T16:26:49Z",
   "count_outdated" : 133,
   "uniques_outdated" : 90,
-  "count" : 142,
-  "uniques" : 98,
+  "count" : 138,
+  "uniques" : 95,
   "clones" : [
     {
       "timestamp": "2022-08-31T00:00:00Z",
-      "count": 5,
-      "count_minmax": [ 2, 5 ],
-      "uniques": 4,
+      "count": 1,
+      "count_minmax": [ 1, 5 ],
+      "uniques": 1,
       "uniques_minmax": [ 1, 4 ]
     },
     {
