@@ -1,11 +1,11 @@
 {
-  "count": 9,
-  "uniques": 5,
+  "count": 5,
+  "uniques": 3,
   "clones": [
     {
       "timestamp": "2022-08-31T00:00:00Z",
-      "count": 5,
-      "uniques": 4
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2022-09-02T00:00:00Z",
